Fix overflow in contact + icon correction in catalog

--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -103,7 +103,6 @@
   }
 
   &__checkbox {
-    position: relative;
     margin-left: $space-xs;
   }
 
