--- a/src/styles/components/_related-articles.scss
+++ b/src/styles/components/_related-articles.scss
@@ -52,6 +52,7 @@
     height: 16px;
     margin-left: $space-sm;
     color: $color-primary;
+    flex-shrink: 0;
   }
 
   &__list {
