--- a/src/styles/layouts/_catalog-filter.scss
+++ b/src/styles/layouts/_catalog-filter.scss
@@ -90,6 +90,10 @@
     }
   }
 
+  &__button-icon {
+    flex-shrink: 0;
+  }
+
   &__button-save {
     width: 100%;
   }
